--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,40 @@
-idf_component_register(
-    SRCS
-        "ds18b20.c"
-    INCLUDE_DIRS
-        "."
-    REQUIRES 
-        driver
-        freertos
+add_library(ds18b20 STATIC)
+
+target_sources(ds18b20 PRIVATE 
+    "ds18b20.c"
+)
+
+target_include_directories(ds18b20 PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+target_compile_options(ds18b20 PUBLIC
+    -std=c23
+    -Wall
+    -Wextra
+    -Wconversion
+    -Wshadow
+    -Wpedantic
+    -Wnarrowing
+    -Waddress
+    -pedantic
+    -Wdeprecated
+    -Wsign-conversion
+    -Wduplicated-cond
+    -Wduplicated-branches
+    -Wlogical-op
+    -Wnull-dereference
+    -Wdouble-promotion
+    -Wimplicit-fallthrough
+    -Wcast-align
+    -Wformat=2
+    -Wformat-security
+    -Wmissing-prototypes
+    -Wmissing-declarations
+    -Wstrict-prototypes
+    -Wold-style-definition
+    -Wundef
+    -Wvla
+    -Wpointer-arith
+    -Wstrict-aliasing=2
 )
